--- a/WindowShare/WindowShare.csproj
+++ b/WindowShare/WindowShare.csproj
@@ -62,6 +62,7 @@
     <Compile Include="DapperHelper.cs" />
     <Compile Include="IDependency.cs" />
     <Compile Include="LogHelper.cs" />
+    <Compile Include="MD5Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringHelper.cs" />
   </ItemGroup>
